--- a/style.css
+++ b/style.css
@@ -247,6 +247,213 @@ main section.view3 .involved .bottom .culture P {
   font-size: 1rem;
   font-weight: 800;
 }
+main section.view4 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  padding: 4rem 1rem;
+  margin-top: 4rem;
+  background: linear-gradient(#F8FBF3, #FCFCE2);
+}
+main section.view4 .consultant {
+  width: 100%;
+}
+main section.view4 .consultant .top img {
+  width: 100%;
+}
+main section.view4 .consultant .bottom {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+}
+main section.view4 .consultant .bottom h1 {
+  font-size: 3rem;
+  font-size: 500;
+}
+main section.view4 .consultant .bottom h4 {
+  font-size: 1.2rem;
+  color: rgb(95, 95, 95);
+  font-weight: 500;
+}
+main section.view4 .consultant .bottom p {
+  font-size: 1.1rem;
+  width: 92%;
+  opacity: 0.7;
+}
+main section.view4 .consultant .bottom .culture {
+  padding: 0.5rem 0rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.view4 .consultant .bottom .culture button {
+  padding: 0.7rem;
+  width: 60%;
+  border: 0.1rem solid royalblue;
+  border-radius: 3rem;
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: royalblue;
+}
+main section.view5 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  padding: 5rem 1rem;
+}
+main section.view5 .invited {
+  width: 100%;
+}
+main section.view5 .invited .top img {
+  width: 100%;
+}
+main section.view5 .invited .bottom {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+}
+main section.view5 .invited .bottom h1 {
+  font-size: 3rem;
+  font-size: 500;
+}
+main section.view5 .invited .bottom h4 {
+  font-size: 1.2rem;
+  color: rgb(95, 95, 95);
+  font-weight: 500;
+}
+main section.view5 .invited .bottom p {
+  font-size: 1.1rem;
+  width: 92%;
+  opacity: 0.7;
+}
+main section.view5 .invited .bottom .culture {
+  padding: 0.5rem 0rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.view5 .invited .bottom .culture button {
+  padding: 0.7rem;
+  width: 40%;
+  border: 0.1rem solid royalblue;
+  border-radius: 3rem;
+  color: royalblue;
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: #FFFFFF;
+}
+main section.view6 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  padding: 3rem 1rem;
+  margin-top: -2rem;
+  background: linear-gradient(#fdfdfd, #FCFCE2);
+}
+main section.view6 .pub {
+  width: 100%;
+}
+main section.view6 .pub .top img {
+  width: 100%;
+}
+main section.view6 .pub .bottom {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+}
+main section.view6 .pub .bottom h1 {
+  font-size: 3rem;
+  font-size: 500;
+}
+main section.view6 .pub .bottom h4 {
+  font-size: 1.2rem;
+  color: rgb(95, 95, 95);
+  font-weight: 500;
+}
+main section.view6 .pub .bottom p {
+  font-size: 1.1rem;
+  width: 92%;
+  opacity: 0.7;
+}
+main section.view6 .pub .bottom .culture {
+  padding: 0.5rem 0rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.view6 .pub .bottom .culture button {
+  padding: 0.7rem;
+  width: 60%;
+  border: 0.1rem solid royalblue;
+  border-radius: 3rem;
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: royalblue;
+}
+main section.view7 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  padding: 6rem 1.5rem;
+}
+main section.view7 .started {
+  width: 100%;
+  background-image: url(./img9.png);
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  background-color: #042449;
+  border-radius: 2rem;
+  padding: 5rem 2dvi 7rem 2rem;
+}
+main section.view7 .started .get {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 2rem 1.5rem;
+}
+main section.view7 .started .get h1 {
+  color: white;
+  font-size: 2.7rem;
+  font-weight: 700;
+}
+main section.view7 .started .get p {
+  color: white;
+  font-size: 1.2rem;
+}
+main section.view7 .started .culture {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 0rem 2rem;
+}
+main section.view7 .started .culture button {
+  padding: 0.7rem;
+  width: 50%;
+  border: 0.1rem solid royalblue;
+  border-radius: 3rem;
+  color: royalblue;
+  font-size: 1rem;
+  font-weight: 700;
+  margin-left: -0.5rem;
+  background-color: rgb(255, 255, 255);
+}
+main section.view7 .started .culture p {
+  color: white;
+  margin-left: 0.5rem;
+  font-weight: 600;
+  font-size: 1rem;
+}
 
 @media (min-width: 900px) {
   main section.view1 {
@@ -330,5 +537,147 @@ main section.view3 .involved .bottom .culture P {
   main section.view3 .involved .bottom .culture p {
     margin-top: 0.5rem;
     color: black;
+  }
+  main section.view4 {
+    flex-direction: row;
+  }
+  main section.view4 .consultant {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  main section.view4 .consultant .top, main section.view4 .consultant .bottom {
+    width: 40%;
+  }
+  main section.view4 .consultant .top {
+    margin-top: -2rem;
+  }
+  main section.view4 .consultant .bottom {
+    margin-top: -2rem;
+  }
+  main section.view4 .consultant .bottom h4 {
+    font-size: 1.5rem;
+  }
+  main section.view4 .consultant .bottom h1 {
+    font-size: 3.5rem;
+  }
+  main section.view4 .consultant .bottom p {
+    width: 87%;
+    font-size: 1.3rem;
+  }
+  main section.view4 .consultant .bottom .culture {
+    display: flex;
+    flex-direction: row;
+  }
+  main section.view4 .consultant .bottom .culture button {
+    width: 45%;
+    font-size: 0.9rem;
+    font-weight: 600;
+  }
+  main section.view5 {
+    flex-direction: row;
+    margin-bottom: -7rem;
+  }
+  main section.view5 .invited {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+  }
+  main section.view5 .invited .top, main section.view5 .invited .bottom {
+    width: 40%;
+  }
+  main section.view5 .invited .top {
+    margin-top: 2rem;
+  }
+  main section.view5 .invited .bottom {
+    margin-top: -6rem;
+  }
+  main section.view5 .invited .bottom h4 {
+    font-size: 1.5rem;
+  }
+  main section.view5 .invited .bottom h1 {
+    font-size: 3.5rem;
+  }
+  main section.view5 .invited .bottom p {
+    width: 87%;
+    font-size: 1.3rem;
+  }
+  main section.view5 .invited .bottom .culture {
+    display: flex;
+    flex-direction: row;
+  }
+  main section.view5 .invited .bottom .culture button {
+    width: 25%;
+    font-size: 0.9rem;
+    font-weight: 600;
+  }
+  main section.view6 {
+    flex-direction: row;
+  }
+  main section.view6 .pub {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: -2rem;
+  }
+  main section.view6 .pub .top, main section.view6 .pub .bottom {
+    width: 40%;
+  }
+  main section.view6 .pub .top {
+    margin-top: -1rem;
+  }
+  main section.view6 .pub .bottom {
+    margin-top: 2rem;
+  }
+  main section.view6 .pub .bottom h4 {
+    font-size: 1.5rem;
+  }
+  main section.view6 .pub .bottom h1 {
+    font-size: 3.5rem;
+  }
+  main section.view6 .pub .bottom p {
+    width: 87%;
+    font-size: 1.3rem;
+  }
+  main section.view6 .pub .bottom .culture {
+    display: flex;
+    flex-direction: row;
+  }
+  main section.view6 .pub .bottom .culture button {
+    width: 30%;
+    font-size: 0.9rem;
+    font-weight: 600;
+  }
+  main section.view7 {
+    flex-direction: row;
+    width: 80%;
+    margin-left: 10rem;
+  }
+  main section.view7 .started {
+    height: 20rem;
+    display: flex;
+    padding: 2rem 2rem 3rem 3rem;
+  }
+  main section.view7 .started .get {
+    display: flex;
+    gap: -4rem;
+  }
+  main section.view7 .started .get h1 {
+    font-size: 3.5rem;
+  }
+  main section.view7 .started .culture {
+    display: flex;
+    flex-direction: row;
+  }
+  main section.view7 .started .culture button {
+    width: 10%;
+    border: none;
+    padding: -1rem;
+  }
+  main section.view7 .started .culture p {
+    margin-top: 0.7rem;
   }
 }/*# sourceMappingURL=style.css.map */
