--- a/style.scss
+++ b/style.scss
@@ -229,7 +229,204 @@ main{
          
          }
     }
-}
+    }
+     section.view4{
+       width: 100%;
+      @include flex-column(0rem);
+      padding: 4rem 1rem;
+      margin-top: 4rem;
+      background: linear-gradient(#F8FBF3,#FCFCE2);
+      .consultant{
+        width: 100%;
+        .top{
+            img{
+                width: 100%;
+            }
+         }
+         .bottom{
+            padding: 1rem;
+            @include flex-column(1.3rem);
+            
+            h1{
+                font-size: 3rem;
+                font-size: 500;
+            }
+            h4{
+              font-size: 1.2rem;
+              color: rgb(95, 95, 95);
+              font-weight: 500;
+            }
+            p{
+                font-size: 1.1rem;
+                width: 92%;
+                opacity: 0.7;
+            }
+           .culture{
+            padding: 0.5rem 0rem;
+            @include flex-column(1rem);
+             button{
+                padding: 0.7rem;
+                width: 60%;
+                border:0.1rem solid royalblue;
+                border-radius: 3rem;
+                color: rgb(255, 255, 255);
+                font-size: 1rem;
+                font-weight: 600;
+                background-color: royalblue;
+            }
+           }
+         
+         }
+    }
+    }
+     section.view5{
+       width: 100%;
+      @include flex-column(0rem);
+      padding: 5rem 1rem;
+      .invited{
+        width: 100%;
+        .top{
+            img{
+                width: 100%;
+            }
+         }
+         .bottom{
+            padding: 1rem;
+            @include flex-column(1.3rem);
+            
+            h1{
+                font-size: 3rem;
+                font-size: 500;
+            }
+            h4{
+              font-size: 1.2rem;
+              color: rgb(95, 95, 95);
+              font-weight: 500;
+            }
+            p{
+                font-size: 1.1rem;
+                width: 92%;
+                opacity: 0.7;
+            }
+           .culture{
+            padding: 0.5rem 0rem;
+            @include flex-column(1rem);
+             button{
+                padding: 0.7rem;
+                width: 40%;
+                border:0.1rem solid royalblue;
+                border-radius: 3rem;
+                color: royalblue;
+                font-size: 1rem;
+                font-weight: 600;
+                background-color: #FFFFFF;
+            }
+           }
+         
+         }
+    }
+    }
+     section.view6{
+       width: 100%;
+      @include flex-column(0rem);
+      padding: 3rem 1rem;
+      margin-top: -2rem;
+      background: linear-gradient(#fdfdfd,#FCFCE2);
+      .pub{
+        width: 100%;
+        .top{
+            img{
+                width: 100%;
+            }
+         }
+         .bottom{
+            padding: 1rem;
+            @include flex-column(1.3rem);
+            
+            h1{
+                font-size: 3rem;
+                font-size: 500;
+            }
+            h4{
+              font-size: 1.2rem;
+              color: rgb(95, 95, 95);
+              font-weight: 500;
+            }
+            p{
+                font-size: 1.1rem;
+                width: 92%;
+                opacity: 0.7;
+            }
+           .culture{
+            padding: 0.5rem 0rem;
+            @include flex-column(1rem);
+             button{
+                padding: 0.7rem;
+                width: 60%;
+                border:0.1rem solid royalblue;
+                border-radius: 3rem;
+                color: rgb(255, 255, 255);
+                font-size: 1rem;
+                font-weight: 600;
+                background-color: royalblue;
+            }
+           }
+         
+         }
+    }
+    }
+    section.view7{
+        width: 100%;
+        @include flex-column(0rem);
+        padding: 6rem 1.5rem;
+
+        .started{
+            width: 100%;
+            background-image:url(./img9.png) ;
+            background-size: cover;
+             @include flex-column(0rem);
+             background-color: #042449;
+             border-radius: 2rem;
+             padding: 5rem 2dvi 7rem 2rem;
+
+             .get{
+                 @include flex-column(1.5rem);
+                 padding: 2rem 1.5rem;
+                 h1{
+                    color: white;
+                    font-size: 2.7rem;
+                    font-weight: 700;
+                 }
+                 p{
+                    color: white;
+                    font-size: 1.2rem
+                 }
+             }
+              .culture{
+                 @include flex-column(1.5rem);
+                 padding: 0rem 2rem;
+                 button{
+                 padding: 0.7rem;
+                 width: 50%;
+                 border:0.1rem solid royalblue;
+                 border-radius: 3rem;
+                 color: royalblue;
+                 font-size: 1rem;
+                 font-weight: 700;
+                 margin-left: -0.5rem;
+                 background-color: rgb(255, 255, 255);
+              }
+                p{
+                    color: white;
+                    margin-left: 0.5rem;
+                    font-weight: 600;
+                    font-size: 1rem;
+
+                 }
+             }
+
+        }
+    }
 }
 
 @media (min-width: 900px){
@@ -329,6 +526,179 @@ main{
                 }
 
             }
+        }
+        section.view4{
+            flex-direction: row;
+
+            .consultant{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+
+                .top,.bottom{
+                    width: 40%;
+                }
+                .top{
+                 margin-top: -2rem ;
+
+                }
+                .bottom{
+                 margin-top: -2rem ;
+
+                 h4{
+                    font-size: 1.5rem;
+                 }
+                 h1{
+                    font-size: 3.5rem;
+                 }
+                 p{
+                    width: 87%;
+                    font-size: 1.3rem;
+                 }
+
+                 .culture{
+                    display: flex;
+                    flex-direction: row;
+
+                    button{
+                        width: 45%;
+                        font-size: 0.9rem;
+                        font-weight: 600;
+                    }
+                 }
+                }
+
+            }
+        }
+        section.view5{
+            flex-direction: row;
+            margin-bottom: -7rem;
+
+            .invited{
+                display: flex;
+                flex-direction: row-reverse;
+                align-items: center;
+                justify-content: center;
+
+                .top,.bottom{
+                    width: 40%;
+                }
+                .top{
+                 margin-top: 2rem ;
+
+
+                }
+                .bottom{
+                 margin-top: -6rem ;
+
+                 h4{
+                    font-size: 1.5rem;
+                 }
+                 h1{
+                    font-size: 3.5rem;
+                 }
+                 p{
+                    width: 87%;
+                    font-size: 1.3rem;
+                 }
+
+                 .culture{
+                    display: flex;
+                    flex-direction: row;
+
+                    button{
+                        width: 25%;
+                        font-size: 0.9rem;
+                        font-weight: 600;
+                    }
+                 }
+                }
+
+            }
+        }
+        section.view6{
+            flex-direction: row;
+           
+
+            .pub{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                margin-top: -2rem;
+
+                .top,.bottom{
+                    width: 40%;
+                }
+                .top{
+                 margin-top: -1rem ;
+
+
+                }
+                .bottom{
+                 margin-top: 2rem ;
+
+                 h4{
+                    font-size: 1.5rem;
+                 }
+                 h1{
+                    font-size: 3.5rem;
+                 }
+                 p{
+                    width: 87%;
+                    font-size: 1.3rem;
+                 }
+
+                 .culture{
+                    display: flex;
+                    flex-direction: row;
+
+                    button{
+                        width: 30%;
+                        font-size: 0.9rem;
+                        font-weight: 600;
+                    }
+                 }
+                }
+
+            }
+        }
+        section.view7{
+           flex-direction: row;
+           width: 80%;
+           margin-left: 10rem;
+
+           
+           .started{
+             height: 20rem;
+             display: flex;
+             padding: 2rem 2rem 3rem 3rem;
+             
+            
+            .get{
+                display: flex;
+                gap: -4rem;
+                h1{
+                    font-size: 3.5rem;
+                }
+            }
+            .culture{
+                display: flex;
+                flex-direction: row;
+                
+                //  margin-bottom: 10rem;
+            button{
+                width: 10%;
+                border: none;
+                padding: -1rem;
+            }
+            p{
+                margin-top: 0.7rem;
+            }
+            }
+           }
+
         }
     }
 }
