--- a/style.scss
+++ b/style.scss
@@ -770,9 +770,10 @@ main{
 
            
            .started{
-             height: 20rem;
+             height: 18rem;
              display: flex;
-             padding: 2rem 2rem 3rem 3rem;
+             padding: 1rem 2rem 3rem 3rem;
+             margin-left: -5rem;
              
             
             .get{
